Specific-type Steps

--- a/RogueElements/RogueElements.csproj
+++ b/RogueElements/RogueElements.csproj
@@ -94,6 +94,8 @@
     <Compile Include="MapGen\FloorPlan\FloorPlan.cs" />
     <Compile Include="MapGen\Grid\AddGridDefaultsStep.cs" />
     <Compile Include="MapGen\FloorPlan\Paths\FloorPathBranch.cs" />
+    <Compile Include="MapGen\Rooms\RoomGenSpecific.cs" />
+    <Compile Include="MapGen\Tiles\StairsStep.cs" />
     <Compile Include="MapGen\Tiles\SpecificTilesStep.cs" />
     <Compile Include="MapGen\Tiles\InitTilesStep.cs" />
     <Compile Include="MapGen\Rooms\PermissiveRoomGen.cs" />
