--- a/RogueElements.Tests/RogueElements.Tests.csproj
+++ b/RogueElements.Tests/RogueElements.Tests.csproj
@@ -90,6 +90,7 @@
     <Compile Include="MapGen\Grid\GridPathSpecificTest.cs" />
     <Compile Include="MapGen\Grid\GridPathCircleTest.cs" />
     <Compile Include="MapGen\Rooms\RoomGenAngledHallTest.cs" />
+    <Compile Include="MapGen\Rooms\RoomGenSpecificTest.cs" />
     <Compile Include="MapGen\Rooms\RoomGenRoundTest.cs" />
     <Compile Include="MapGen\Rooms\RoomGenCrossTest.cs" />
     <Compile Include="MapGen\Rooms\RoomGenBumpTest.cs" />
