--- a/RogueElements/RogueElements.csproj
+++ b/RogueElements/RogueElements.csproj
@@ -97,6 +97,7 @@
     <Compile Include="MapGen\FloorPlan\FloorPlan.cs" />
     <Compile Include="MapGen\Grid\AddGridDefaultsStep.cs" />
     <Compile Include="MapGen\FloorPlan\Paths\FloorPathBranch.cs" />
+    <Compile Include="MapGen\Rooms\RoomGenCave.cs" />
     <Compile Include="MapGen\Rooms\RoomGenSpecific.cs" />
     <Compile Include="MapGen\Tiles\ITile.cs" />
     <Compile Include="MapGen\Tiles\WaterStep.cs" />
