renamed step and fixed roomgen
GridPlan modifications

GridPlan configurable cell walls

--- a/RogueElements.Tests/RogueElements.Tests.csproj
+++ b/RogueElements.Tests/RogueElements.Tests.csproj
@@ -75,7 +75,7 @@
     <Compile Include="MapGen\Grid\AddGridSpecialRoomTest.cs" />
     <Compile Include="MapGen\Grid\AddGridDefaultsTest.cs" />
     <Compile Include="MapGen\Grid\GridFloorPlanTest.cs" />
-    <Compile Include="MapGen\Grid\ConnectGridTerminalTest.cs" />
+    <Compile Include="MapGen\Grid\ConnectGridBranchTest.cs" />
     <Compile Include="MapGen\FloorPlan\AddSpecialRoomTest.cs" />
     <Compile Include="MapGen\FloorPlan\ConnectBranchTest.cs" />
     <Compile Include="MapGen\FloorPlan\FloorPlanTest.cs" />
