--- a/RogueElements.Examples/RogueElements.Examples.csproj
+++ b/RogueElements.Examples/RogueElements.Examples.csproj
@@ -72,6 +72,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DebugState.cs" />
     <Compile Include="Ex1_Tiles\Map.cs" />
     <Compile Include="Ex1_Tiles\MapGenContext.cs" />
     <Compile Include="Ex1_Tiles\Tile.cs" />
