--- a/RogueElements.Tests/RogueElements.Tests.csproj
+++ b/RogueElements.Tests/RogueElements.Tests.csproj
@@ -1,20 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\NUnit3TestAdapter.3.10.0\build\net35\NUnit3TestAdapter.props" Condition="Exists('..\packages\NUnit3TestAdapter.3.10.0\build\net35\NUnit3TestAdapter.props')" />
-  <Import Project="..\packages\NUnit.3.10.1\build\NUnit.props" Condition="Exists('..\packages\NUnit.3.10.1\build\NUnit.props')" />
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{3EDB9E87-866C-4A51-A347-547D35C069BF}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>RogueElements.Tests</RootNamespace>
     <AssemblyName>RogueElements.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
+
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -50,64 +44,11 @@
     <OutputPath>bin\x64\Release\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <HintPath>..\packages\Castle.Core.4.2.1\lib\net45\Castle.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Moq, Version=4.8.0.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
-      <HintPath>..\packages\Moq.4.8.2\lib\net45\Moq.dll</HintPath>
-    </Reference>
-    <Reference Include="nunit.framework, Version=3.10.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.10.1\lib\net45\nunit.framework.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Threading.Tasks.Extensions, Version=4.1.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.3.0\lib\portable-net45+win8+wp8+wpa81\System.Threading.Tasks.Extensions.dll</HintPath>
-    </Reference>
-    <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.ValueTuple.4.4.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="FovTest.cs" />
-    <Compile Include="MapGen\FloorPlan\ConnectTest.cs" />
-    <Compile Include="MapGen\Grid\AddGridSpecialRoomTest.cs" />
-    <Compile Include="MapGen\Grid\AddGridDefaultsTest.cs" />
-    <Compile Include="MapGen\Grid\GridFloorPlanTest.cs" />
-    <Compile Include="MapGen\Grid\ConnectGridBranchTest.cs" />
-    <Compile Include="MapGen\FloorPlan\AddSpecialRoomTest.cs" />
-    <Compile Include="MapGen\FloorPlan\ConnectBranchTest.cs" />
-    <Compile Include="MapGen\FloorPlan\FloorPlanTest.cs" />
-    <Compile Include="MapGen\FloorPlan\FloorPathBranchTest.cs" />
-    <Compile Include="MapGen\GenSteps\PathStepTest.cs" />
-    <Compile Include="MapGen\GenSteps\IsolateStepTest.cs" />
-    <Compile Include="MapGen\GenSteps\StartEndStepTest.cs" />
-    <Compile Include="MapGen\GenSteps\WaterStepTest.cs" />
-    <Compile Include="MapGen\Grid\GridPathStartStepTest.cs" />
-    <Compile Include="MapGen\Grid\GridPathBranchTest.cs" />
-    <Compile Include="MapGen\Grid\GridPathGridTest.cs" />
-    <Compile Include="MapGen\Grid\GridPathTwoSidesTest.cs" />
-    <Compile Include="MapGen\Grid\GridPathSpecificTest.cs" />
-    <Compile Include="MapGen\Grid\GridPathCircleTest.cs" />
-    <Compile Include="MapGen\Rooms\RoomGenAngledHallTest.cs" />
-    <Compile Include="MapGen\Rooms\RoomGenCaveTest.cs" />
-    <Compile Include="MapGen\Rooms\RoomGenSpecificTest.cs" />
-    <Compile Include="MapGen\Rooms\RoomGenRoundTest.cs" />
-    <Compile Include="MapGen\Rooms\RoomGenCrossTest.cs" />
-    <Compile Include="MapGen\Rooms\RoomGenBumpTest.cs" />
-    <Compile Include="MapGen\Rooms\RoomGenBlockedTest.cs" />
-    <Compile Include="MapGen\Rooms\RoomGenSquareTest.cs" />
-    <Compile Include="MapGen\Rooms\PermissiveRoomGenTest.cs" />
-    <Compile Include="MapGen\Rooms\RoomGenTest.cs" />
-    <Compile Include="NoiseGenTest.cs" />
-    <Compile Include="MapGen\GenSteps\SpawnerTest.cs" />
-    <Compile Include="RandTest.cs" />
-    <Compile Include="GridTest.cs" />
-    <Compile Include="DetectionTest.cs" />
-    <Compile Include="CollisionTest.cs" />
-    <Compile Include="DirExtTest.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <PackageReference Include="nunit" Version="3.10.1" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
+    <PackageReference Include="Castle.Core" Version="4.2.1.0"/>
+    <PackageReference Include="Moq" Version="4.8.0.0"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RogueElements\RogueElements.csproj">
@@ -115,26 +56,4 @@
       <Name>RogueElements</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
-  </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\NUnit.3.10.1\build\NUnit.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NUnit.3.10.1\build\NUnit.props'))" />
-    <Error Condition="!Exists('..\packages\NUnit3TestAdapter.3.10.0\build\net35\NUnit3TestAdapter.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NUnit3TestAdapter.3.10.0\build\net35\NUnit3TestAdapter.props'))" />
-  </Target>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
