Configure NuGet package metadata

--- a/RogueElements.Examples/RogueElements.Examples.csproj
+++ b/RogueElements.Examples/RogueElements.Examples.csproj
@@ -8,6 +8,8 @@
     <AssemblyName>RogueElements.Examples</AssemblyName>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
