--- a/RogueElements/RogueElements.csproj
+++ b/RogueElements/RogueElements.csproj
@@ -6,7 +6,14 @@
     <OutputType>Library</OutputType>
     <RootNamespace>RogueElements</RootNamespace>
     <AssemblyName>RogueElements</AssemblyName>
+    <Version>1.0.0</Version>
     <TargetFramework>netstandard2.0</TargetFramework>
+
+    <Authors>Audino</Authors>
+    <Description>Roguelike Map Generation, built to be game-agnostic.</Description>
+    <PackageTags>game;library;roguelike;map;random;generator</PackageTags>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/audinowho/RogueElements</RepositoryUrl>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
