--- a/RogueElements/RogueElements.csproj
+++ b/RogueElements/RogueElements.csproj
@@ -6,6 +6,7 @@
     <AssemblyName>RogueElements</AssemblyName>
     <Version>1.0.0</Version>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <CodeAnalysisRuleSet>../base.ruleset</CodeAnalysisRuleSet>
 
     <Authors>Audino</Authors>
     <Description>Roguelike Map Generation, built to be game-agnostic.</Description>
@@ -13,4 +14,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/audinowho/RogueElements</RepositoryUrl>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.2" />
+  </ItemGroup>
 </Project>
