Fix roslyn analyzer timeout on linux

--- a/RogueElements.Examples/RogueElements.Examples.csproj
+++ b/RogueElements.Examples/RogueElements.Examples.csproj
@@ -10,9 +10,6 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.2" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\RogueElements\RogueElements.csproj">
       <Project>{a777bc3d-2635-401d-96d7-162178d8dfc4}</Project>
       <Name>RogueElements</Name>
@@ -20,5 +17,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Ex7_Integration\RogueSharp.LICENSE.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NetCore.Analyzers" Version="2.9.2" />
+    <PackageReference Include="Microsoft.NetFramework.Analyzers" Version="2.9.2" />
   </ItemGroup>
 </Project>
