Move RogueSharp from sources to package reference

--- a/RogueElements.Examples/RogueElements.Examples.csproj
+++ b/RogueElements.Examples/RogueElements.Examples.csproj
@@ -16,12 +16,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Ex7_Integration\RogueSharp.LICENSE.txt" />
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="CodeCracker.CSharp" Version="1.1.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="RogueSharp" Version="4.2.0" />
   </ItemGroup>
 </Project>
