--- a/RogueElements.Examples/RogueElements.Examples.csproj
+++ b/RogueElements.Examples/RogueElements.Examples.csproj
@@ -8,9 +8,10 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>RogueElements.Examples</RootNamespace>
     <AssemblyName>RogueElements.Examples</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -68,6 +69,9 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="RogueSharp, Version=4.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RogueSharp.4.2.0\lib\net40\RogueSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
@@ -99,6 +103,7 @@
     <Compile Include="Ex6_Items\Item.cs" />
     <Compile Include="Ex6_Items\Map.cs" />
     <Compile Include="Ex6_Items\MapGenContext.cs" />
+    <Compile Include="Ex7_Integration\CellTile.cs" />
     <Compile Include="Ex7_Integration\Example7.cs" />
     <Compile Include="Ex7_Integration\ExampleCreationStrategy.cs" />
     <Compile Include="Ex7_Integration\MapGenContext.cs" />
@@ -109,6 +114,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="examples.ruleset" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RogueElements\RogueElements.csproj">
