--- a/RogueElements.Tests/packages.config
+++ b/RogueElements.Tests/packages.config
@@ -5,5 +5,5 @@
   <package id="NUnit" version="3.10.1" targetFramework="net45" />
   <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net45" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net45" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net45" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net45" requireReinstallation="true" />
 </packages>
